--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/dompurify@3.1.6/dist/purify.min.js"
+    crossorigin="anonymous">
+  </script>
+
 
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
@@ -58,7 +63,13 @@
   </main>
 
   <script src="assets/js/config.js"></script>
+  <!-- Race configs -->
+  <script src="assets/js/races/race_309.js"></script>
+  <script src="assets/js/races/race_247.js"></script>
+
   <script src="assets/js/api.js"></script>
+  <script src="assets/js/utils.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/dompurify@3.1.6/dist/purify.min.js"></script>
   <script src="assets/js/app.js"></script>
   
 </body>
