[2] Pig update about feature: statictics, sorting

--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
             Chọn sự kiện
         </h2>
 
-        <div id="eventTime" class="text-sm text-gray-600">
-        <div id="eventDate"></div>
-        <div id="countdown"></div>
+        <div id="eventTime" class="mt-2 text-sm text-gray-600 space-y-1">
+        <div id="eventDate" class="mt-2 text-sm text-gray-600 space-y-1"></div>
+        <div id="countdown" class="mt-2 text-sm text-gray-600 space-y-1"></div>
+        <div id="eventStats" class="mt-2 text-sm text-gray-600 space-y-1"></div>
         </div>
 
 
